fix: Text align set to center for nav header

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
+  text-align: center;
 }
 nav h1 {
   margin: auto;
